fix: make sidebar scrollable when overflow

--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,9 @@
   * {
     @apply border-border;
   }
+  html {
+    @apply h-svh md:overflow-hidden;
+  }
   body {
     @apply bg-background text-foreground;
   }
